--- a/digits.ipynb
+++ b/digits.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMnSHM5MoCl2reDijoh+w8O",
+      "authorship_tag": "ABX9TyM+Vk4svJSqW4ot7RN3Qm9d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,8 @@
       "source": [
         "import tensorflow as tf\r\n",
         "from tensorflow import keras\r\n",
-        "from tensorflow.keras import layers"
+        "from tensorflow.keras import layers\r\n",
+        "ddd"
       ],
       "execution_count": null,
       "outputs": []
